resolved fdo#60366 make MATCH() accept a single cell reference

Change-Id: I7059abdb6232b95e0b940b34f74bf87182510146
(cherry picked from commit c0fdab890086c2cb749c348db42eb760e31539de)
Reviewed-on: https://gerrit.libreoffice.org/2019
Reviewed-by: Norbert Thiebaud <nthiebaud@gmail.com>
Reviewed-by: Kohei Yoshida <kohei.yoshida@gmail.com>
Tested-by: Kohei Yoshida <kohei.yoshida@gmail.com>